Implement UI of Account Section, First authentication

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,26 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-
-@custom-variant dark (&:is(.dark *));
+/* 
+@custom-variant dark (&:is(.dark *)); */
 
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --background: #FDFDFD;
+  --foreground: #1F2937;
   --radius: 0.625rem;
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --primary: #FFC401;
+  --primary-foreground: #1F2937;
+  --secondary: oklch(93.403% 0.00011 271.152);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
+  --accent: #5205EE;
+  --accent-foreground: #FFFFFF;
+  --destructive: #FF4848;
+  --border: oklch(82.968% 0.00009 271.152);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -78,7 +78,7 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
@@ -123,13 +123,40 @@ body {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-}
+} */
 
 @layer base {
+  
   * {
     @apply border-border outline-ring/50;
   }
+  
   body {
     @apply bg-background text-foreground;
+  }
+
+  *:focus {
+    @apply border-purple-600 ring-1 ring-purple-600 outline-none;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    @apply border-2 rounded-sm p-2
+  }
+
+  input[type="checkbox"],
+  input[type="radio"] {
+    @apply mr-4 
+  }
+
+  input[type="checkbox"]:checked,
+  input[type="radio"]:checked {
+    @apply accent-accent ring-2 ring-purple-600 border-purple-600;
+  }
+
+  label {
+    @apply mb-3 mt-6
   }
 }
